fixed issue on mobile nav

--- a/css/style.scss
+++ b/css/style.scss
@@ -37,7 +37,7 @@
     background-color: #016101;
 }
 
-.login{
+.login, .nav-links{
     display: none;
 }
 
